bynkc/tests/fixtures/negative/167_numeric_mix/input.bynk
commons bad {
  fn mix() -> Float {
    1 + 2.0
  }
}
